# dwm-win32

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  README.txt  bstack.c  build.bat  build.cmd  config.def.h  config.h.in  config.mk  configure.cmd  dwm-win32.c  fibonacci.c  gaplessgrid.c
.github/workflows/: ci.yml
cmake/luajit/: Bundle.cmake  CMakeLists.txt  LuaJIT.cmake  lua.cmake
cmake/luajit/Utils/: Darwin.wine.cmake  windows.toolchain.cmake
cmake/luajit/host/buildvm/: CMakeLists.txt
cmake/luajit/host/minilua/: CMakeLists.txt
docs/: api.md
src/: dwm-win32.c  grid.c  nmaster-ncol.c  win32_utf8.c  win32_utf8.h
src/mods/: client.c  client.h  display.c  display.h  dwm.c  dwm.h  eventemitter.c  eventemitter.h  hotkey.c  hotkey.h  screen.c  screen.h
